--- a/Prevu.Synoptics.V2911_Flex/Details/D880.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Details/D880.xaml
@@ -11,11 +11,10 @@
               d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas Height="460" Width="452">
     <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="40" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSHA1" Canvas.Left="45" Canvas.Top="26"/>
-    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSH" Canvas.Left="45" Canvas.Top="143" />
+    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSH" Canvas.Left="46" Canvas.Top="142" />
     <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSHA" Canvas.Left="257" Canvas.Top="45"/>
     <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSH" Canvas.Left="257" Canvas.Top="142" />
-    <Labels:SignalLabel FlowDirection="RightToLeft" ComponentName="890-61-LEV" SignalName="LSHA2" Canvas.Left="41" Canvas.Top="67" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:SignalLabel FlowDirection="RightToLeft" ComponentName="890-61-LEV" SignalName="LSHA" Canvas.Left="46" Canvas.Top="45" HorizontalAlignment="Left" VerticalAlignment="Center" SignalPosition="Right"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
          VerticalAlignment="Top" 
          ComponentName="880-61-LEV" Canvas.Left="77" Canvas.Top="249"/>
