--- a/Prevu.Synoptics.V2911_Flex/Pages/P330.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P330.xaml
@@ -25,7 +25,7 @@
     <Labels:Pipe Width="129" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" Canvas.Left="848" Canvas.Top="143" VisibilityComponent="" VisibilitySignal="" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="DirectionOne"/>
 
 
-    <Labels:Pipe Width="164" StatusComponent="298-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="191" Canvas.Top="142" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" >
+    <Labels:Pipe Width="164" StatusComponent="298-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="163" Canvas.Top="162" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -67,7 +67,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="553" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="837" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="180" StatusComponent="298-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="97" Canvas.Top="65" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" />
+    <Labels:Pipe Width="107" StatusComponent="298-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="142" Canvas.Top="85" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" />
     <Labels:Pipe Width="100" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="435" Canvas.Top="658" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:Pipe Width="594" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="234" Canvas.Top="366" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
       <Labels:Pipe.RenderTransform>
@@ -169,7 +169,7 @@
     <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="320-41-LT1" 
-            JumpToLabel="298-01-MA1" Canvas.Left="83" Canvas.Top="41" />
+            JumpToLabel="298-01-MA1" Canvas.Left="93" Canvas.Top="61" />
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
             ComponentName="322-01-MA1" Canvas.Left="170" Canvas.Top="670" />
@@ -178,7 +178,7 @@
     <Labels:DeviceLabel 
             ComponentName="330-MIXER" Canvas.Left="752" Canvas.Top="633" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-            ComponentName="324-01-MA1" Canvas.Left="1074" Canvas.Top="87" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="324-01-MA1" Canvas.Left="1074" Canvas.Top="85" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
             ComponentName="335-MIXER" Canvas.Left="1153" Canvas.Top="509" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
